--- a/src/Components/Institute/FacultyManagement/TeacherDashboard/DashboardCSS/SingleClassdetails.css
+++ b/src/Components/Institute/FacultyManagement/TeacherDashboard/DashboardCSS/SingleClassdetails.css
@@ -19,10 +19,10 @@
 } */
 
 
-
+/* 
 .single-class-details {
   min-height: 100vh;
-}
+} */
 
 /* Header Styles */
 .header {
@@ -142,7 +142,7 @@
 
 /* Main Content Styles */
 .main-content {
-  max-width: 1280px;
+  
   margin: 0 auto;
   padding: 2rem;
 }
