fix: Correct variable name in AllCaseStudies component and update case study sample data in InstituteProfileDashboard; add date formatting function in SingleTeacherdetailspage; reverse case studies order in TeacherDetailslistings; update ApiURL to return local URL

--- a/src/Components/CaseStudy/CaseNavBar/CaseNavBar.css
+++ b/src/Components/CaseStudy/CaseNavBar/CaseNavBar.css
@@ -1,6 +1,6 @@
 .case-navbar {
   display: flex;
-  position: sticky;
+  /* position: sticky; */
   top: 4rem;
   justify-content: space-between;
   align-items: center;
