fix: Enhance case assignment process by updating state management and adding error handling; improve UI responsiveness and integrate API calls for fetching assigned case studies

--- a/src/Components/Institute/FacultyManagement/TeacherDashboard/DashboardCSS/CaseAssignProcess.css
+++ b/src/Components/Institute/FacultyManagement/TeacherDashboard/DashboardCSS/CaseAssignProcess.css
@@ -344,6 +344,12 @@
   background-color: #1d4ed8;
 }
 
+.Non-practywiz-case-assign-to-student-question {
+ 
+    max-height: 46vh;
+    overflow: hidden;
+}
+
 /* Responsive Styles */
 @media (max-width: 1024px) {
   .case-assign-to-student-dashboard {
