--- a/src/Components/Employer/Internships/InternshipCss/AppliedInternships.css
+++ b/src/Components/Employer/Internships/InternshipCss/AppliedInternships.css
@@ -84,6 +84,7 @@
   font-size: 12px;
   font-weight: 500;
   text-align: center;
+
 }
 
 .my-app-status-accepted {
@@ -122,8 +123,12 @@
 }
 
 @media (max-width: 768px) {
+  .my-app-table-container{
+  
+  /* display: flex; */
+  }
   .my-app-container {
-    padding: 0 1rem;
+  padding: 0 1rem;
   }
 
   .my-app-table {
@@ -135,12 +140,32 @@
     display: none;
   }
 
+     .my-app-status {
+       display: inline;
+     }
   .my-app-table,
   .my-app-table tbody,
   .my-app-table tr,
   .my-app-table td {
-    display: block;
+    /* display: flex; */
+    /* flex-direction: column; */
     width: 100%;
+    min-width: 40%;
+    display: flex;
+    flex-direction: column;
+    
+   
+   
+  }
+ .my-app-table tr{
+ 
+  flex-wrap: wrap;
+ }
+  .my-app-table td{
+    display: flex;
+    text-align: center;
+    justify-content: center;
+
   }
 
   .my-app-table tr {
@@ -151,11 +176,13 @@
   }
 
   .my-app-table td {
-    border-bottom: 1px solid #e5e7eb;
-    display: flex;
-    justify-content: space-between;
+    /* z-index: 300000; */
+    overflow: visible;
+    /* border-bottom: 1px solid #e5e7eb; */
+    /* display: flex; */
+    /* justify-content: space-between;
     align-items: center;
-    padding: 10px 16px;
+    padding: 10px 16px; */
   }
 
   .my-app-table td:last-child {
@@ -169,4 +196,5 @@
     text-transform: uppercase;
     font-size: 12px;
   }
+ 
 }
