--- a/src/Components/Institute/FacultyManagement/TeacherDashboard/DashboardCSS/SingleAssignedCase.css
+++ b/src/Components/Institute/FacultyManagement/TeacherDashboard/DashboardCSS/SingleAssignedCase.css
@@ -709,3 +709,40 @@
     display: none;
   }
 }
+
+.casestudyShowModel-QuestionShow-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.8);
+  -webkit-backdrop-filter: blur(4px);
+  backdrop-filter: blur(4px);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+  padding: 20px;
+}
+
+.casestudyShowModel-QuestionShow-overlay {
+  background: white;
+  border-radius: 16px;
+  width: 95%;
+  /* max-width: 900px; */
+  max-height: 95vh;
+  overflow-y: scroll;
+  box-shadow: 0 25px 50px rgba(0, 0, 0, 0.3);
+  display: flex;
+  flex-direction: column;
+}
+.casestudyShowModel-QuestionShow-close-button{
+    position: absolute;
+    right: 4rem;
+    border: none;
+    border-radius: 8px;
+    color: white;
+    cursor: pointer;
+    padding: 10px;
+}
